fix: Alignment of checkboxes in preview

--- a/src/scss/components/_components.editor.scss
+++ b/src/scss/components/_components.editor.scss
@@ -219,7 +219,6 @@
       button {
         align-items: baseline;
         background: transparent;
-        color: red !important;
         font-size: 1.3rem;
         margin-bottom: 0.4rem;
         margin-left: 1.6rem;
