--- a/src/scss/components/_components.mixins.checkbox.scss
+++ b/src/scss/components/_components.mixins.checkbox.scss
@@ -19,6 +19,8 @@ $checkboxSize: 1.4rem;
 }
 
 @mixin checkboxChecked {
+  position: relative;
+
   &:before {
     @include icon(checkmark);
     background-color: var(--s-controlAccentColor);
