--- a/src/scss/components/_components.tinyMCE.scss
+++ b/src/scss/components/_components.tinyMCE.scss
@@ -126,6 +126,8 @@ body {
 
   // checkboxes have different classnames when editor is split
   li.joplin-checkbox {
+    margin-left: 0.6rem;
+
     input {
       display: none;
     }
